[package]
edition = "2021"
name = "mqtt_broker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunatic = "0.9.1"
mqtt_packet_3_5 = {version = "0.2.2", features = ["serde_support"]}
num = "0.4.0"
queue-file = "1.1"
serde = "1.0.132"

[build]
target = "wasm32-wasi"

[target.wasm32-wasi]
runner = "lunatic"
